--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,5 +1,5 @@
 .aboutContainer {
-    height: 100vh;
+    min-height: 100vh;
     padding: 40px 20px;
     font-family: 'Arial', sans-serif;
     background-color: #f1f1f1;
@@ -51,12 +51,12 @@
   .contentSection {
     max-width: 800px;
     margin: 0 auto;
-    text-align: left;
+    text-align: right;
     color: #666;
   }
   
   .contentSection h4 {
-    text-align: center;
+    text-align: right;
     font-size: 22px;
     color: #333;
     margin-top: 20px;
